Add benchmarks for LFU and LRU cache policies
- Introduced new benchmark files for LFU and LRU cache implementations, allowing performance evaluation of various operations.
- Added multiple benchmark functions for LFU, including insert/get, eviction churn, and frequency updates.
- Implemented benchmark functions for LRU, focusing on insert/get, eviction churn, and hotset access patterns.
- Updated Cargo.toml to include new benchmark configurations for both LFU and LRU caches.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,11 @@ criterion = "0.8"
 [[bench]]
 name = "fifo"
 harness = false
+
+[[bench]]
+name = "lru"
+harness = false
+
+[[bench]]
+name = "lfu"
+harness = false
