--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ out/
 
 # Github Copilot persisted session migrations, see: https://github.com/microsoft/copilot-intellij-feedback/issues/712#issuecomment-3322062215
 .idea/**/copilot.data.migration.*.xml
+.DS_Store
