Update CHANGELOG and add GitHub release workflow
- Updated `CHANGELOG.md` to include new documentation index in `README.md` and example programs for LRU, LRU-K, LFU, and Heap LFU.
- Enhanced example comments with expected output and brief explanations for better user understanding.
- Introduced a new GitHub Actions workflow for automated release creation upon tag pushes and manual dispatch, streamlining the release process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 env:
   CARGO_TERM_COLOR: always
@@ -101,7 +101,7 @@ jobs:
   bench:
     name: Benchmarks
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@stable
