--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: dtolnay/rust-toolchain@1.100.0  # Update this to your MSRV
+      - uses: dtolnay/rust-toolchain@1.85.0  # MSRV for Rust 2024 edition
       - uses: Swatinem/rust-cache@v2
       - name: Check MSRV
         run: cargo check --all-features
