Enhance Miri test coverage in CI workflow
- Expanded Miri test commands in the CI workflow to include additional core data structures and lightweight policies, improving test coverage and organization.
- Maintained focus on relevant scenarios by skipping concurrent, stress, large, performance, and memory tests, ensuring efficient execution of targeted tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,11 +75,7 @@ jobs:
         run: |
           cargo miri test --package cachekit --lib ds:: \
             -- --skip concurrent --skip stress --skip large --skip performance --skip memory
-          cargo miri test --package cachekit --lib policy::fifo::fifo_no_metrics \
-            -- --skip concurrent --skip stress --skip large --skip performance --skip memory
-          cargo miri test --package cachekit --lib policy::lfu \
-            -- --skip concurrent --skip stress --skip large --skip performance --skip memory
-          cargo miri test --package cachekit --lib policy::lru_k \
+          cargo miri test --package cachekit --lib policy:: \
             -- --skip concurrent --skip stress --skip large --skip performance --skip memory
 
   # Documentation build check
