Refine Miri test commands in CI workflow for consistency
- Streamlined the Miri test commands in the CI workflow by removing redundant line breaks, enhancing readability and consistency.
- Continued to focus on relevant scenarios by maintaining the skipping of concurrent, stress, large, performance, and memory tests for efficient execution.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,8 @@ jobs:
           cargo miri setup
       - name: Test with Miri (core DS + light policies)
         run: |
-          cargo miri test --package cachekit --lib ds:: \
-            -- --skip concurrent --skip stress --skip large --skip performance --skip memory
-          cargo miri test --package cachekit --lib policy:: \
-            -- --skip concurrent --skip stress --skip large --skip performance --skip memory
+          cargo miri test --package cachekit --lib ds:: -- --skip concurrent --skip stress --skip large --skip performance --skip memory
+          cargo miri test --package cachekit --lib policy:: -- --skip concurrent --skip stress --skip large --skip performance --skip memory
 
   # Documentation build check
   docs:
