--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,25 +18,125 @@ jobs:
   release:
     name: GitHub Release
     runs-on: ubuntu-latest
+    env:
+      RELEASE_TAG: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref_name }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - name: Run benchmarks
         run: cargo bench --no-fail-fast
+      - name: Generate benchmark summary
+        run: |
+          set -euo pipefail
+          criterion_dir="target/criterion"
+
+          mean_ns() {
+            jq -r '.mean.point_estimate' "$1/new/estimates.json"
+          }
+
+          mems_from() {
+            local bench_dir="$1"
+            local elements
+            local ns
+            elements=$(jq -r '.throughput.Elements' "$bench_dir/new/benchmark.json")
+            ns=$(jq -r '.mean.point_estimate' "$bench_dir/new/estimates.json")
+            awk -v e="$elements" -v ns="$ns" 'BEGIN { printf "%.2f", (e * 1e9 / ns) / 1e6 }'
+          }
+
+          lru_get=$(mean_ns "$criterion_dir/lru_get_hit_ns")
+          lru_insert=$(mean_ns "$criterion_dir/lru_insert_full_ns")
+          lru_k_get=$(mean_ns "$criterion_dir/lru_k_get_hit_ns")
+          lru_k_insert=$(mean_ns "$criterion_dir/lru_k_insert_full_ns")
+          lfu_get=$(mean_ns "$criterion_dir/lfu_get_hit_ns")
+          lfu_insert=$(mean_ns "$criterion_dir/lfu_insert_full_ns")
+          lfu_touch=$(mean_ns "$criterion_dir/lfu_policy_only_touch_ns")
+
+          lru_insert_get=$(mems_from "$criterion_dir/lru_policy/insert_get")
+          lru_eviction=$(mems_from "$criterion_dir/lru_policy/eviction_churn")
+          lru_pop=$(mems_from "$criterion_dir/lru_policy/pop_lru")
+          lru_hot=$(mems_from "$criterion_dir/lru_policy/touch_hotset")
+
+          lru_k_insert_get=$(mems_from "$criterion_dir/lru_k_policy/insert_get")
+          lru_k_eviction=$(mems_from "$criterion_dir/lru_k_policy/eviction_churn")
+          lru_k_pop=$(mems_from "$criterion_dir/lru_k_policy/pop_lru_k")
+          lru_k_hot=$(mems_from "$criterion_dir/lru_k_policy/touch_hotset")
+
+          lfu_insert_get=$(mems_from "$criterion_dir/lfu_policy/insert_get")
+          lfu_eviction=$(mems_from "$criterion_dir/lfu_policy/eviction_churn")
+          lfu_pop=$(mems_from "$criterion_dir/lfu_pop_lfu_policy")
+          lfu_hot=$(mems_from "$criterion_dir/lfu_get_hotset_policy")
+
+          lru_uniform=$(mems_from "$criterion_dir/lru_workload_hit_rate/uniform")
+          lru_hotset=$(mems_from "$criterion_dir/lru_workload_hit_rate/hotset_90_10")
+          lru_scan=$(mems_from "$criterion_dir/lru_workload_hit_rate/scan")
+
+          lru_k_uniform=$(mems_from "$criterion_dir/lru_k_workload_hit_rate/uniform")
+          lru_k_hotset=$(mems_from "$criterion_dir/lru_k_workload_hit_rate/hotset_90_10")
+          lru_k_scan=$(mems_from "$criterion_dir/lru_k_workload_hit_rate/scan")
+
+          lfu_uniform=$(mems_from "$criterion_dir/lfu_workload_hit_rate/uniform")
+          lfu_hotset=$(mems_from "$criterion_dir/lfu_workload_hit_rate/hotset_90_10")
+          lfu_scan=$(mems_from "$criterion_dir/lfu_workload_hit_rate/scan")
+
+          cat > /tmp/latest-run.md <<EOF
+          Micro-ops (ns/op):
+
+          | Cache | get_hit | insert_full | policy_only_touch |
+          | --- | --- | --- | --- |
+          | LRU | ${lru_get%.*} | ${lru_insert%.*} | n/a |
+          | LRU-K | ${lru_k_get%.*} | ${lru_k_insert%.*} | n/a |
+          | LFU | ${lfu_get%.*} | ${lfu_insert%.*} | ${lfu_touch%.*} |
+
+          Policy throughput (Melem/s = million operations per second):
+
+          | Cache | insert_get | eviction_churn | pop | touch_hotset |
+          | --- | --- | --- | --- | --- |
+          | LRU | ${lru_insert_get} | ${lru_eviction} | ${lru_pop} | ${lru_hot} |
+          | LRU-K | ${lru_k_insert_get} | ${lru_k_eviction} | ${lru_k_pop} | ${lru_k_hot} |
+          | LFU | ${lfu_insert_get} | ${lfu_eviction} | ${lfu_pop} | ${lfu_hot} |
+
+          Workload throughput (Melem/s, 200k ops):
+
+          | Cache | uniform | hotset_90_10 | scan |
+          | --- | --- | --- | --- |
+          | LRU | ${lru_uniform} | ${lru_hotset} | ${lru_scan} |
+          | LRU-K | ${lru_k_uniform} | ${lru_k_hotset} | ${lru_k_scan} |
+          | LFU | ${lfu_uniform} | ${lfu_hotset} | ${lfu_scan} |
+          EOF
+
+          awk '
+            /<!-- LATEST_RUN_START -->/ {
+              print;
+              while ((getline line < "/tmp/latest-run.md") > 0) print line;
+              in=1;
+              next
+            }
+            /<!-- LATEST_RUN_END -->/ { in=0; print; next }
+            !in { print }
+          ' docs/benchmarks.md > /tmp/benchmarks.md
+
+          mv /tmp/benchmarks.md docs/benchmarks.md
       - name: Package benchmark results
         run: tar -czf criterion-results.tar.gz target/criterion
+      - name: Build docs site with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./docs
+          destination: ./_site
       - name: Prepare gh-pages publish directory
         run: |
-          mkdir -p target/gh-pages/benchmarks/${{ github.ref_name }}
-          mkdir -p target/gh-pages/benchmarks/latest
-          cp -R target/criterion/. target/gh-pages/benchmarks/${{ github.ref_name }}/
-          cp -R target/criterion/. target/gh-pages/benchmarks/latest/
+          mkdir -p _site/benchmarks/${RELEASE_TAG}
+          mkdir -p _site/benchmarks/latest
+          cp -R target/criterion/. _site/benchmarks/${RELEASE_TAG}/
+          cp -R target/criterion/. _site/benchmarks/latest/
       - name: Publish benchmark report to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: target/gh-pages
+          publish_dir: _site
       - name: Create release for tag push
         if: github.event_name == 'push'
         uses: softprops/action-gh-release@v2
