--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   release:
@@ -38,17 +40,16 @@ jobs:
         with:
           source: ./docs
           destination: ./_site
-      - name: Prepare gh-pages publish directory
+      - name: Stage benchmark artifacts for Pages
         run: |
           mkdir -p _site/benchmarks/${RELEASE_TAG}
           mkdir -p _site/benchmarks/latest
           cp -R target/criterion/. _site/benchmarks/${RELEASE_TAG}/
           cp -R target/criterion/. _site/benchmarks/latest/
-      - name: Publish benchmark report to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _site
+          path: _site
       - name: Create release for tag push
         if: github.event_name == 'push'
         uses: softprops/action-gh-release@v2
@@ -63,3 +64,18 @@ jobs:
           tag_name: ${{ inputs.tag }}
           generate_release_notes: true
           files: criterion-results.tar.gz
+
+  deploy:
+    name: Deploy GitHub Pages
+    runs-on: ubuntu-latest
+    needs: release
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
