Update .gitignore to include additional IntelliJ IDEA configuration files
- Added entries for `vcs.xml` and `Project_Default.xml` to the .gitignore file to prevent user-specific IntelliJ IDEA settings from being tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ target
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/vcs.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
+.idea/**/Project_Default.xml
 .idea/**/dictionaries
 .idea/**/shelf
 
