Update versioning and CI workflows for improved stability and documentation
- Changed the version of the `cachekit` package to `0.1.0-alpha` in both `Cargo.toml` and `Cargo.lock` to reflect the alpha release status.
- Updated the documentation URL in `Cargo.toml` for better accessibility.
- Refined GitHub Actions workflows by standardizing the checkout action version to `v4` across all jobs, enhancing consistency and reliability.
- Introduced a new maintenance workflow for scheduled security audits and smoke tests, ensuring ongoing health checks of the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "cachekit"
-version = "0.1.0"
+version = "0.1.0-alpha"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 description = "High-performance, policy-driven cache primitives for Rust systems (FIFO/LRU/ARC) with optional metrics."
 repository = "https://github.com/OxidizeLabs/cachekit"
-documentation = "https://docs.rs/cachekit"
+documentation = "https://oxidizelabs.github.io/cachekit/"
 readme = "README.md"
-keywords = ["cache", "lru", "fifo", "arc", "metrics"]
+keywords = ["cache", "lru", "fifo", "arc", "cache"]
 categories = ["data-structures", "caching"]
 
 [features]
