--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,73 +3,68 @@ name: Release
 on:
   push:
     tags:
-      - "v*"
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g., v0.1.0)"
-        required: true
-        type: string
+      - "v*.*.*"
+
+env:
+  CARGO_TERM_COLOR: always
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 jobs:
+  validate:
+    name: Validate Release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - name: Ensure tag points to main
+        run: |
+          git fetch origin main --depth=1
+          git merge-base --is-ancestor "${GITHUB_SHA}" origin/main
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          components: rustfmt, clippy
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Format check
+        run: cargo fmt --check
+
+      - name: Clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      - name: Tests
+        run: cargo test --all-features --all-targets
+
+      - name: Docs
+        run: cargo doc --no-deps --all-features
+        env:
+          RUSTDOCFLAGS: -Dwarnings
+
+      - name: Package verification
+        run: |
+          cargo package
+          cargo publish --dry-run
+
   release:
     name: GitHub Release
     runs-on: ubuntu-latest
-    env:
-      RELEASE_TAG: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref_name }}
+    needs: validate
     steps:
       - uses: actions/checkout@v6
-        with:
-          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
-      - name: Run benchmarks
-        run: cargo bench --no-fail-fast
-      - name: Generate benchmark summary
-        run: |
-          ./scripts/update_docs_benchmarks.sh target/criterion docs/benchmarks.md
-      - name: Package benchmark results
-        run: tar -czf criterion-results.tar.gz target/criterion
-      - name: Build docs site with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./docs
-          destination: ./_site
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: _site
-      - name: Create release for tag push
-        if: github.event_name == 'push'
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: criterion-results.tar.gz
 
-      - name: Create release for manual dispatch
-        if: github.event_name == 'workflow_dispatch'
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ inputs.tag }}
-          generate_release_notes: true
-          files: criterion-results.tar.gz
-
-  deploy:
-    name: Deploy GitHub Pages
+  publish:
+    name: Publish to crates.io
     runs-on: ubuntu-latest
-    needs: release
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    needs: validate
+    if: ${{ secrets.CARGO_REGISTRY_TOKEN != '' }}
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/checkout@v6
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Publish crate
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish
