Update Rust version and refine toolchain documentation
- Set the Rust version to `1.85` in `Cargo.toml` to ensure compatibility with the latest features and improvements.
- Enhanced comments in `rust-toolchain.toml` to clarify the purpose of the toolchain configuration, emphasizing standardization of tooling and targets.

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
-# cachkit Rust toolchain configuration
-# This ensures all contributors use the same Rust version
+# cachekit Rust toolchain configuration
+# This standardizes tooling (rustfmt/clippy) and targets; the Rust version tracks the latest stable.
 
 [toolchain]
 channel = "stable"
