--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,11 +60,10 @@ jobs:
     name: Publish to crates.io
     runs-on: ubuntu-latest
     needs: validate
-    if: ${{ vars.CARGO_REGISTRY_TOKEN != '' }}
     steps:
       - uses: actions/checkout@v6
       - uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Publish crate
         env:
-          CARGO_REGISTRY_TOKEN: ${{ vars.CARGO_REGISTRY_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: cargo publish
