--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,14 @@ jobs:
       - uses: actions/checkout@v6
       - name: Ensure tag points to main
         run: |
-          git fetch origin main --depth=1
-          git merge-base --is-ancestor "${GITHUB_SHA}" origin/main
+          # `actions/checkout` is typically shallow; ensure we have enough `origin/main`
+          # history for an accurate ancestry check.
+          if git rev-parse --is-shallow-repository | grep -q true; then
+            git fetch --no-tags --prune --unshallow origin main
+          else
+            git fetch --no-tags --prune origin main
+          fi
+          git merge-base --is-ancestor "${GITHUB_SHA}^{}" origin/main
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt, clippy
