--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Build
         run: cargo build --verbose
+      - name: Run doc tests
+        run: cargo test --doc
       - name: Run tests
         run: cargo test --all-features --all-targets
 
