Add documentation for 2Q cache policy
- Introduced a new document detailing the 2Q cache eviction policy, outlining its goals, core ideas, data structures, operations, and complexity.
- Explained the two-queue design that reduces scan pollution by maintaining a probation queue for new items and a protected queue for frequently accessed items.
- Included references to foundational literature and provided insights into the operational complexity of the policy.
- Updated the README to include the 2Q policy in the index of implemented policies, ensuring users can easily find relevant documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,16 @@ rustdoc-args = ["--cfg", "docsrs"]
 default = []
 manager = []
 metrics = []
+dhat-heap = ["dhat"]
 
 [dependencies]
 parking_lot = "0.12"
 log = "0.4"
+dhat = { version = "0.3", optional = true }
 
 [dev-dependencies]
 criterion = "0.8"
+dhat = "0.3"
 
 [[bench]]
 name = "fifo"
@@ -45,3 +48,8 @@ harness = false
 [[bench]]
 name = "lru_k"
 harness = false
+
+[[bin]]
+name = "dhat_profile"
+path = "src/bin/dhat_profile.rs"
+required-features = ["dhat-heap"]
