Add S3-FIFO cache policy implementation and benchmarks
- Introduced `S3FifoCache` struct implementing the S3-FIFO eviction algorithm, designed for scan resistance using three FIFO queues (Small, Main, Ghost) to manage item access and eviction efficiently.
- Added comprehensive benchmarks in `benches/comparison.rs` to evaluate the performance of the S3-FIFO policy against existing cache policies, focusing on hit rates, insert/evict operations, and mixed workload scenarios.
- Created detailed documentation for the S3-FIFO policy, covering its architecture, operations, performance characteristics, and example usage, ensuring clarity and consistency across the codebase.
- Updated the policy module to include the new S3-FIFO policy, making it accessible within the cache library.
- Enhanced the README and related documentation to reflect the addition of the S3-FIFO policy, ensuring users are informed of its capabilities and usage scenarios.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,10 @@ harness = false
 name = "comparison"
 harness = false
 
+[[bench]]
+name = "s3_fifo"
+harness = false
+
 [[bin]]
 name = "dhat_profile"
 path = "src/bin/dhat_profile.rs"
