Add human-readable benchmark reports for cache policies
- Introduced a new benchmark module `reports.rs` that provides human-readable comparison tables for various cache policies, enhancing the evaluation process without the overhead of criterion.
- Updated `Cargo.toml` to include the new benchmark configuration for reports.
- Enhanced the `README.md` to document the usage of the new reports, detailing available report types and their descriptions.
- Streamlined the workload definitions to support comprehensive testing scenarios, ensuring better evaluation of cache policies under diverse access patterns.
- Improved documentation across the benchmark files to clarify usage and expected behaviors, aligning with Rustdoc standards for better usability.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,11 @@ harness = false
 name = "comparison"
 harness = false
 
+# Human-readable reports (not criterion, just prints tables)
+[[bench]]
+name = "reports"
+harness = false
+
 # Policy-specific unique operations
 [[bench]]
 name = "policy_lru"
