--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 [features]
 default = []
 metrics = []
+concurrency = ["parking_lot"]
 
 [dependencies]
-parking_lot = "0.12"
+parking_lot = { version = "0.12", optional = true }
 log = "0.4"
 rustc-hash = "2.1"
 
