Introduce benchmark support module and JSON artifact generation
- Added a new `bench-support` module to encapsulate benchmark utilities, including workload generation, metrics collection, and result formatting.
- Implemented a JSON artifact runner that executes the full benchmark matrix and outputs structured results, enhancing the observability of benchmark runs.
- Updated `Cargo.toml` to include the new module and its dependencies, ensuring proper integration with the existing benchmark suite.
- Refactored existing benchmark files to utilize the new `bench-support` module, streamlining the codebase and improving maintainability.
- Enhanced documentation to reflect the new structure and provide clear guidance on usage, aligning with Rustdoc standards.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[workspace]
+members = [".", "bench-support"]
+resolver = "2"
+
 [package]
 name = "cachekit"
 version = "0.2.0-alpha"
@@ -30,12 +34,16 @@ log = "0.4"
 rustc-hash = "2.1"
 
 [dev-dependencies]
+bench-support = { path = "bench-support" }
 criterion = "0.8"
 dhat = "0.3"
 lru = "0.16"
 quick_cache = "0.6"
 rand = "0.9"
 rand_distr = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
 
 # =============================================================================
 # Benchmarks - organized by purpose
@@ -59,6 +67,11 @@ harness = false
 # Human-readable reports (not criterion, just prints tables)
 [[bench]]
 name = "reports"
+harness = false
+
+# JSON artifact runner (produces target/benchmarks/<run-id>/results.json)
+[[bench]]
+name = "runner"
 harness = false
 
 # Policy-specific unique operations
