Add render_docs binary for generating benchmark documentation
- Introduced a new binary `render_docs` to automate the rendering of benchmark results from JSON to Markdown format for GitHub Pages.
- Enhanced the `Cargo.toml` to include the new binary, facilitating easy access to documentation generation.
- Updated documentation to provide usage instructions and examples for the new rendering tool, ensuring clarity and alignment with Rustdoc standards.
- Improved the overall structure of benchmark documentation, making it more accessible and user-friendly for analysis and reporting.

--- a/bench-support/Cargo.toml
+++ b/bench-support/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 publish = false
 
+[[bin]]
+name = "render_docs"
+path = "src/bin/render_docs.rs"
+
 [dependencies]
 cachekit = { path = ".." }
 criterion = "0.5"
