Add benchmark charts and update documentation generation
- Introduced a new HTML template for rendering interactive benchmark charts, enhancing the visualization of cache performance metrics.
- Updated the `render_docs` binary to generate the new `charts.html` file, providing quick access to benchmark results and insights.
- Enhanced the Markdown output to include quick links to the interactive charts and raw JSON data, improving usability for users analyzing benchmark results.
- Updated `.gitignore` to exclude benchmark artifacts, ensuring a cleaner repository.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ out/
 .idea/**/copilot.data.migration.*.xml
 .DS_Store
 /dhat-heap.json
+
+# Benchmark artifacts
+docs/benchmarks/latest/
+docs/benchmarks/*/
