Update GitHub Actions workflow to force add benchmark results
- Modified the `benchmarks.yml` workflow to force add generated benchmark files, ensuring they are committed even if they are listed in `.gitignore`.
- This change improves the reliability of the benchmark results being pushed to the repository, enhancing the visibility of performance metrics for users.

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -120,12 +120,12 @@ jobs:
 
       - name: Commit and push results
         run: |
-          # Add generated files
-          git add docs/benchmarks/latest/
+          # Add generated files (force add since they're in .gitignore)
+          git add -f docs/benchmarks/latest/
 
           # Add version snapshot if it exists
           if [ -n "$(find docs/benchmarks -maxdepth 1 -name 'v*' -type d 2>/dev/null)" ]; then
-            git add docs/benchmarks/v*/
+            git add -f docs/benchmarks/v*/
           fi
 
           # Check if there are changes to commit
