--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,8 @@ rand_distr = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+proptest = "1.5"
+arbitrary = { version = "1.4", features = ["derive"] }
 
 # =============================================================================
 # Benchmarks - organized by purpose
