Enhance CI configuration for Miri testing
- Updated the CI workflow to include `MIRIFLAGS` for Miri tests, allowing for better isolation error handling during testing.
- This change aims to improve the robustness of the testing process by providing warnings for isolation errors, enhancing overall test reliability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,8 @@ jobs:
         run: |
           cargo miri test --package cachekit --lib ds:: -- --skip concurrent --skip stress --skip large --skip performance --skip memory
           cargo miri test --package cachekit --lib policy:: -- --skip concurrent --skip stress --skip large --skip performance --skip memory
+        env:
+          MIRIFLAGS: -Zmiri-isolation-error=warn
 
   # Property-based tests with higher case count
   property-tests:
