Add fuzz targets for FixedHistory to enhance testing coverage
- Introduced three new fuzz targets: `fixed_history_arbitrary_ops`, `fixed_history_record_stress`, and `fixed_history_property_tests` to test various operations and invariants of the FixedHistory data structure.
- Updated `Cargo.toml` to include the new fuzz targets, improving the testing framework's robustness.
- Enhanced `README.md` with detailed instructions on running the new fuzz tests, ensuring clarity for users.
- Added comprehensive comments in the fuzz target files to clarify testing objectives and expected behaviors.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -40,3 +40,24 @@ path = "fuzz_targets/clock_ring_eviction_patterns.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "fixed_history_arbitrary_ops"
+path = "fuzz_targets/fixed_history_arbitrary_ops.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "fixed_history_record_stress"
+path = "fuzz_targets/fixed_history_record_stress.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "fixed_history_property_tests"
+path = "fuzz_targets/fixed_history_property_tests.rs"
+test = false
+doc = false
+bench = false
