Add fuzz targets for FrequencyBuckets to improve testing coverage
- Introduced three new fuzz targets: `frequency_buckets_arbitrary_ops`, `frequency_buckets_stress`, and `frequency_buckets_property_tests` to test various operations and invariants of the FrequencyBuckets data structure.
- Updated `Cargo.toml` to include the new fuzz targets, enhancing the testing framework's robustness.
- Enhanced `README.md` with detailed instructions on running the new fuzz tests, ensuring clarity for users.
- Added comprehensive comments in the fuzz target files to clarify testing objectives and expected behaviors.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -61,3 +61,24 @@ path = "fuzz_targets/fixed_history_property_tests.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "frequency_buckets_arbitrary_ops"
+path = "fuzz_targets/frequency_buckets_arbitrary_ops.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "frequency_buckets_stress"
+path = "fuzz_targets/frequency_buckets_stress.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "frequency_buckets_property_tests"
+path = "fuzz_targets/frequency_buckets_property_tests.rs"
+test = false
+doc = false
+bench = false
