Add fuzz targets for KeyInterner to enhance testing coverage
- Introduced three new fuzz targets: `interner_arbitrary_ops`, `interner_stress`, and `interner_property_tests` to test various operations and invariants of the KeyInterner data structure.
- Updated `Cargo.toml` to include the new fuzz targets, improving the testing framework's robustness.
- Enhanced `README.md` with detailed instructions on running the new fuzz tests, ensuring clarity for users.
- Added comprehensive comments in the fuzz target files to clarify testing objectives and expected behaviors.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -103,3 +103,24 @@ path = "fuzz_targets/ghost_list_property_tests.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "interner_arbitrary_ops"
+path = "fuzz_targets/interner_arbitrary_ops.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "interner_stress"
+path = "fuzz_targets/interner_stress.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "interner_property_tests"
+path = "fuzz_targets/interner_property_tests.rs"
+test = false
+doc = false
+bench = false
